[package]
name        = "proxima-grpc-bench"
version     = "0.1.0"
edition     = "2021"
description = "gRPC benchmark: naive Redis cache vs proxima trie-based cache, measured over the wire"

[[bin]]
name = "proxima-grpc-bench"
path = "src/main.rs"

[dependencies]
proxima      = { path = "../../lib" }
tokio        = { version = "1", features = ["full"] }
tonic        = { version = "0.11", features = ["codegen", "transport"] }
prost        = "0.12"
redis        = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
hdrhistogram = "7"
clap         = { version = "4", features = ["derive"] }
anyhow       = "1"
serde_json   = "1"
rand         = "0.8"
s2           = "0.0.10"
